//用户信息
syntax = "proto2";
package douyin.core;
option go_package = "./proto";
message douyin_user_request {
  required int64 user_id = 1; // 用户id
  required string token = 2; // 用户鉴权token
}

message douyin_user_reSsponse {
  required int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  required User user = 3; // 用户信息
}

message User {
  required int64 id = 1; // 用户id
  required string name = 2; // 用户名称
  optional int64 follow_count = 3; // 关注总数
  optional int64 follower_count = 4; // 粉丝总数
  required bool is_follow = 5; // true-已关注，false-未关注
}

message douyin_user_login_request {
  required string username = 1; // 登录用户名
  required string password = 2; // 登录密码
}

message douyin_user_login_response {
  required int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
  required int64 user_id = 3; // 用户id
  required string token = 4; // 用户鉴权token
}

message douyin_user_register_request{
  required string username=1;
  required string password=2;
}

message douyin_user_register_response{
  required int32 status_code=1;
  optional string status_msg=2;
  required int64 user_id=3;
  required string token=4;
}